load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/core-coin/go-randomx
gazelle(name = "gazelle")

cc_library(
    name = "randomx",
    srcs = select({
        "@io_bazel_rules_go//go/platform:darwin": ["build/macos-x86_64/librandomx.a"],
        "@io_bazel_rules_go//go/platform:linux_amd64": ["build/linux-x86_64/librandomx.a"],
        "@io_bazel_rules_go//go/platform:windows_amd64": ["build/windows-x86_64/librandomx.a"],
    }),
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"]
)

go_library(
    name = "go_default_library",
    srcs = [
        "randomx.go",
    ],
    cgo = True,
    cdeps = [":randomx"],
    importpath = "github.com/core-coin/go-randomx",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["randomx_test.go"],
    embed = [":go_default_library"],
)
